feat(Auth): add jwt2 hapi module, but not configured

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workshop",
+  "name": "LeftOvers",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "common-env": "^6.0.1",
     "debug": "^2.3.2",
     "hapi": "^15.2.0",
+    "hapi-auth-jwt2": "^7.2.0",
     "hapi-swagger": "^7.4.0",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
