--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "inert": "^4.0.2",
     "joi": "^9.2.0",
     "lodash": "^4.16.6",
+    "massive": "^2.5.0",
     "vision": "^4.1.0",
     "when": "^3.7.7",
     "winston": "^2.3.0"
